--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,6 @@ emoji==2.14.1
 et_xmlfile==2.0.0
 executing==2.2.0
 faiss-cpu==1.11.0
-fastapi==0.116.0
 fastjsonschema==2.21.1
 filelock==3.18.0
 filetype==1.2.0
@@ -271,3 +270,6 @@ yarl==1.20.1
 zipp==3.23.0
 zope.interface==7.2
 zstandard==0.23.0
+fastapi==0.88.0
+langchain_community==0.0.21  # example version
+openai==1.3.3
