--- a/requirements.txt
+++ b/requirements.txt
@@ -270,6 +270,6 @@ yarl==1.20.1
 zipp==3.23.0
 zope.interface==7.2
 zstandard==0.23.0
-fastapi==0.88.0
+fastapi
 langchain_community==0.0.21  # example version
 openai==1.3.3
