--- a/requirements.txt
+++ b/requirements.txt
@@ -1,272 +1,7 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.9.0
-asttokens==3.0.0
-attrs==25.3.0
-Automat==25.4.16
-backoff==2.2.1
-backports.tarfile==1.2.0
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-build==1.2.2.post1
-CacheControl==0.14.3
-cachetools==5.5.2
-certifi==2025.6.15
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.2
-chromadb==1.0.15
-cleo==2.1.0
-click==8.2.1
-colorama==0.4.6
-coloredlogs==15.0.1
-constantly==23.10.4
-contourpy==1.3.2
-crashtest==0.4.1
-cryptography==45.0.4
-cssselect==1.3.0
-cycler==0.12.1
-dataclasses-json==0.6.7
-decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.18
-distlib==0.3.9
-distro==1.9.0
-dulwich==0.22.8
-durationpy==0.10
-emoji==2.14.1
-et_xmlfile==2.0.0
-executing==2.2.0
-faiss-cpu==1.11.0
-fastjsonschema==2.21.1
-filelock==3.18.0
-filetype==1.2.0
-findpython==0.6.3
-Flask==3.1.1
-Flask-SQLAlchemy==3.1.1
-flatbuffers==25.2.10
-fonttools==4.58.4
-frozenlist==1.7.0
-fsspec==2025.5.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.73.1
-h11==0.16.0
-html5lib==1.1
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.33.2
-humanfriendly==10.0
-hyperlink==21.0.0
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-incremental==24.7.2
-installer==0.7.0
-ipython==9.3.0
-ipython_pygments_lexers==1.1.1
-itemadapter==0.11.0
-itemloaders==1.3.2
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.2.1
-jedi==0.19.2
-Jinja2==3.1.6
-jiter==0.10.0
-jmespath==1.0.1
-joblib==1.5.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-keyring==25.6.0
-kiwisolver==1.4.8
-kubernetes==33.1.0
-langchain-community==0.3.27
-langchain-core==0.3.67
-langchain-text-splitters==0.3.8
-langdetect==1.0.9
-langsmith==0.4.4
-lxml==5.4.0
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.3
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mmh3==5.1.0
-more-itertools==10.7.0
-mpmath==1.3.0
-msgpack==1.1.1
-multidict==6.5.0
-mypy_extensions==1.1.0
-narwhals==1.44.0
-nba_api==1.10.0
-nest-asyncio==1.6.0
-networkx==3.5
-nltk==3.9.1
-numpy==2.2.6
-oauthlib==3.3.1
-olefile==0.47
-omegaconf==2.3.0
-onnxruntime==1.22.0
-openai==0.28.1
-opencv-python==4.12.0.88
-openpyxl==3.1.5
-opentelemetry-api==1.34.1
-opentelemetry-exporter-otlp-proto-common==1.34.1
-opentelemetry-exporter-otlp-proto-grpc==1.34.1
-opentelemetry-proto==1.34.1
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
-orjson==3.10.18
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.3.0
-parsel==1.10.0
-parso==0.8.4
-pbs-installer==2025.7.12
-pdf2image==1.17.0
-pdfminer.six==20250506
-pi_heif==1.0.0
-pikepdf==9.9.0
-pillow==11.2.1
-pkginfo==1.12.1.2
-platformdirs==4.3.8
-poetry==2.1.3
-poetry-core==2.1.3
-posthog==5.4.0
-prompt_toolkit==3.0.51
-propcache==0.3.2
-Protego==0.4.0
-proto-plus==1.26.1
-protobuf==5.26.1
-psutil==7.0.0
-pure_eval==0.2.3
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybase64==1.4.1
-pycocotools==2.0.10
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pydeck==0.9.1
-PyDispatcher==2.0.7
-Pygments==2.19.1
-PyMuPDF==1.26.3
-pyOpenSSL==25.1.0
-pypandoc==1.15
-pyparsing==3.2.3
-pypdf==5.7.0
-PyPDF2==3.0.1
-pypdfium2==4.30.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-PySocks==1.7.1
-pytesseract==0.3.13
-python-certifi-win32==1.6.1
-python-dateutil==2.9.0.post0
-python-docx==1.2.0
-python-dotenv==1.1.0
-python-iso639==2025.2.18
-python-magic==0.4.27
+fastapi==0.110.1
+uvicorn[standard]==0.29.0
 python-multipart==0.0.20
-python-oxmsg==0.0.2
-python-pptx==1.0.2
-pytz==2025.2
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-queuelib==1.8.0
-randomuser==1.6
-RapidFuzz==3.13.0
-referencing==0.36.2
-regex==2024.11.6
+aiofiles==24.1.0
 requests==2.32.4
-requests-file==2.1.0
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.7.0
-scipy==1.16.0
-Scrapy==2.13.2
-selenium==4.33.0
-sentence-transformers==5.0.0
-service-identity==24.2.0
-setuptools-scm==8.3.1
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-SQLAlchemy==2.0.41
-sqlmodel==0.0.24
-stack-data==0.6.3
-starlette==0.46.2
-streamlit==1.46.1
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tldextract==5.3.0
-tokenizers==0.21.2
-toml==0.10.2
-tomlkit==0.13.3
-torch==2.7.1
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.53.1
-trio==0.30.0
-trio-websocket==0.12.2
-trove-classifiers==2025.5.9.12
-Twisted==25.5.0
-typer==0.16.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-tzdata==2025.2
-unstructured==0.18.3
-unstructured-client==0.38.1
-unstructured.pytesseract==0.3.15
-urllib3==2.4.0
-uvicorn==0.35.0
-virtualenv==20.31.2
-w3lib==2.3.1
-watchdog==6.0.0
-watchfiles==1.1.0
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.3
-wikipedia==1.4.0
-wrapt==1.17.2
-wsproto==1.2.0
-xlrd==2.0.2
-xlsxwriter==3.2.5
-yarl==1.20.1
-zipp==3.23.0
-zope.interface==7.2
-zstandard==0.23.0
-fastapi
+pydantic==2.11.7
+jinja2==3.1.6
